# OrderFirstRabbitmq

./: .gitignore  README.md  pyproject.toml
src/: config.py  create_db.py  database.py  main.py
src/bot/: bot.py
src/models/: items.py  orders.py  users.py
src/redisclient/: cache.py  redisclient.py
src/routers/: auth.py  items.py  orders.py  users.py
src/schemas/: __init__.py  items.py  orders.py  users.py
src/servies/: auth_service.py  item_service.py  order_service.py  user_service.py
src/utils/: security.py
